[gd_scene load_steps=11 format=3 uid="uid://cwnic1s8y1ex1"]

[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIBGNBlack.tres" id="2"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedCN.tres" id="3"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRBlackOp.tres" id="3_lixjl"]
[ext_resource type="Script" path="res://MGF Scene/Formation/PanelPlayerData.gd" id="4"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedCP.tres" id="5"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIP.tres" id="6"]
[ext_resource type="StyleBox" uid="uid://bugyfau5s5ky3" path="res://Assets2D/Theme/btnUIN.tres" id="7"]
[ext_resource type="PackedScene" uid="uid://dewv5bv65hsac" path="res://MGF Scene/Market/PlayerData.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://pce1iwo4iew2" path="res://Assets2D/UI/iconExit.png" id="9_3apjb"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UI.tres" id="11"]

[node name="PanelPlayerData" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="BG" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(770, 500)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.5
offset_top = -336.0
offset_right = 352.5
offset_bottom = 336.0
theme_override_styles/panel = ExtResource("3_lixjl")

[node name="Text" type="Label" parent="Panel"]
visible = false
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_right = -16.0
offset_bottom = -608.0
text = "Add player"

[node name="Label" type="Panel" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_bottom = -608.0
theme_override_styles/panel = ExtResource("7")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Label"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 8
alignment = 1

[node name="ButtonSort" type="Button" parent="Panel/Label/HBoxContainer"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("7")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("6")
theme_override_styles/focus = ExtResource("6")
text = "Sort"

[node name="ButtonAll" type="Button" parent="Panel/Label/HBoxContainer"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("7")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("6")
theme_override_styles/focus = ExtResource("6")
text = "ALL"

[node name="ButtonAtk" type="Button" parent="Panel/Label/HBoxContainer"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("7")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("6")
theme_override_styles/focus = ExtResource("6")
text = "ATK"

[node name="ButtonMid" type="Button" parent="Panel/Label/HBoxContainer"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("7")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("6")
theme_override_styles/focus = ExtResource("6")
text = "MID"

[node name="ButtonDef" type="Button" parent="Panel/Label/HBoxContainer"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("7")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("6")
theme_override_styles/focus = ExtResource("6")
text = "DEF"

[node name="ButtonGk" type="Button" parent="Panel/Label/HBoxContainer"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("7")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("6")
theme_override_styles/focus = ExtResource("6")
text = "GK"

[node name="ButtonCLB" type="Button" parent="Panel/Label/HBoxContainer"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("7")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("6")
theme_override_styles/focus = ExtResource("6")
text = "CLB"

[node name="OvInput" type="LineEdit" parent="Panel/Label/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("7")
theme_override_styles/focus = ExtResource("6")
theme_override_styles/read_only = ExtResource("6")
text = "0"
alignment = 1

[node name="CLBInput" type="LineEdit" parent="Panel/Label/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("7")
theme_override_styles/focus = ExtResource("6")
theme_override_styles/read_only = ExtResource("6")
text = "NON"
alignment = 1

[node name="ClosePanel" type="Button" parent="Panel/Label/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("3")
theme_override_styles/hover = ExtResource("5")
theme_override_styles/pressed = ExtResource("5")
theme_override_styles/disabled = ExtResource("5")
theme_override_styles/focus = ExtResource("5")
icon = ExtResource("9_3apjb")
expand_icon = true

[node name="VScrollBarBXH" type="ScrollContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 80.0
offset_right = -16.0
offset_bottom = -16.0

[node name="GridContainer" type="GridContainer" parent="Panel/VScrollBarBXH"]
layout_mode = 2
mouse_filter = 2
columns = 3

[node name="Panel" parent="Panel/VScrollBarBXH/GridContainer" instance=ExtResource("8")]
layout_mode = 2

[node name="Panel2" parent="Panel/VScrollBarBXH/GridContainer" instance=ExtResource("8")]
layout_mode = 2

[node name="Panel3" parent="Panel/VScrollBarBXH/GridContainer" instance=ExtResource("8")]
layout_mode = 2

[node name="Panel4" parent="Panel/VScrollBarBXH/GridContainer" instance=ExtResource("8")]
layout_mode = 2

[node name="Panel5" parent="Panel/VScrollBarBXH/GridContainer" instance=ExtResource("8")]
layout_mode = 2

[node name="Panel6" parent="Panel/VScrollBarBXH/GridContainer" instance=ExtResource("8")]
layout_mode = 2

[node name="Panel7" parent="Panel/VScrollBarBXH/GridContainer" instance=ExtResource("8")]
layout_mode = 2

[node name="Panel8" parent="Panel/VScrollBarBXH/GridContainer" instance=ExtResource("8")]
layout_mode = 2

[node name="Panel9" parent="Panel/VScrollBarBXH/GridContainer" instance=ExtResource("8")]
layout_mode = 2

[node name="Panel10" parent="Panel/VScrollBarBXH/GridContainer" instance=ExtResource("8")]
layout_mode = 2

[node name="Panel11" parent="Panel/VScrollBarBXH/GridContainer" instance=ExtResource("8")]
layout_mode = 2

[node name="Panel12" parent="Panel/VScrollBarBXH/GridContainer" instance=ExtResource("8")]
layout_mode = 2

[connection signal="pressed" from="Panel/Label/HBoxContainer/ButtonSort" to="." method="_on_ButtonSort_pressed"]
[connection signal="pressed" from="Panel/Label/HBoxContainer/ButtonAll" to="." method="_on_ButtonAll_pressed"]
[connection signal="pressed" from="Panel/Label/HBoxContainer/ButtonAtk" to="." method="_on_ButtonAtk_pressed"]
[connection signal="pressed" from="Panel/Label/HBoxContainer/ButtonMid" to="." method="_on_ButtonMid_pressed"]
[connection signal="pressed" from="Panel/Label/HBoxContainer/ButtonDef" to="." method="_on_ButtonDef_pressed"]
[connection signal="pressed" from="Panel/Label/HBoxContainer/ButtonGk" to="." method="_on_ButtonGk_pressed"]
[connection signal="pressed" from="Panel/Label/HBoxContainer/ButtonCLB" to="." method="_on_ButtonCLB_pressed"]
[connection signal="pressed" from="Panel/Label/HBoxContainer/ClosePanel" to="." method="_on_ClosePanel_pressed"]
